--- a/Pemaland/src/main/java/Pemaland/Roomss.form
+++ b/Pemaland/src/main/java/Pemaland/Roomss.form
@@ -141,7 +141,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Tubes/gambar hote.jpg"/>
+              <Image iconType="3" name="/Pemaland/gambar hote.jpg"/>
             </Property>
           </Properties>
         </Component>
