--- a/Pemaland/src/Pemaland/HistoryFood.form
+++ b/Pemaland/src/Pemaland/HistoryFood.form
@@ -121,7 +121,7 @@
               <Font name="Segoe UI Black" size="14" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+              <Color blue="66" green="66" red="66" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Home"/>
             <Property name="autoscrolls" type="boolean" value="true"/>
